# vaxalert

./: .gitignore  .replit  README.md  pyproject.toml  requirements.txt
src/vaxalert/: vaxalert.py
