[tool.poetry]
name = "repl_python3_vaxalert"
version = "0.1.0"
description = ""
authors = ["irishdrug1511 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
schedule = "^1.1.0"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
